get note withid
